force-app/main/default/objects/Service_Area__c/Service_Area__c.object-meta.xml
<CustomObject>
    <description>Defines geographical boundaries (wards, zones, pin codes) for grievance reporting and resolution. Useful for assigning complaints to departments based on citizen location.</description>
    <label>Service Area</label>
    <nameField>
        <label>Service Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>