force-app/main/default/objects/Service_Area__c/fields/Assigned_Department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the ward or zone to a responsible department.</description>
    <inlineHelpText>Links the ward or zone to a responsible department.</inlineHelpText>
    <label>Assigned Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Service Areas</relationshipLabel>
    <relationshipName>Service_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>