force-app/main/default/objects/Service_Area__c/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <description>Local postal code for the ward/area.</description>
    <inlineHelpText>Local postal code for the ward/area.</inlineHelpText>
    <label>Pin Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>