force-app/main/default/objects/Service_Area__c/fields/Ward_Name__c.field-meta.xml
<CustomField>
    <fullName>Ward_Name__c</fullName>
    <description>The name or number of the municipal ward.</description>
    <inlineHelpText>The name or number of the municipal ward.</inlineHelpText>
    <label>Ward Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>