force-app/main/default/objects/Service_Area__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Higher-level grouping of multiple wards.</description>
    <inlineHelpText>Higher-level grouping of multiple wards.</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Zone</fullName>
            </value>
            <value>
                <fullName>South Zone</fullName>
            </value>
            <value>
                <fullName>East Zone</fullName>
            </value>
            <value>
                <fullName>West Zone</fullName>
            </value>
            <value>
                <fullName>Central Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>